<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_shopping_cart"/>
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_status"/>
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="40"
        android:title="@string/action_contact"
        app:showAsAction="never" />
</menu>